🚠📮 Checkpoint ./views/books/index.pug:17880600/28 ./views/books/create.pug:17880600/25 ./views/transactions/search.pug:17880600/30 ./views/user/index.pug:17880600/111 ./views/books/update.pug:17880600/5 ./views/transactions/index.pug:17880600/10 ./views/user/create.pug:17880600/5 ./views/user/update.pug:17880600/5

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -12,7 +12,7 @@ block content
 
       input(type="text", name= "q")
 
-      button(type="submit", class="btn btn-primary") Search ID     
+      button(type="submit", class="btn btn-primary ml-2") Search ID     
 
     form(action="/transaction/create", method="POST")
       label Users:
@@ -28,7 +28,7 @@ block content
         each book in books
           option(value= book.bookId, class="dropdown-item") #{book.title}  
         span &nbsp
-      button(type="submit", class="btn btn-primary") Add
+      button(type="submit", class="btn btn-primary ml-2") Add
 
     table(style='width:100%', class="table table-bordered")
       tr
