--- a/views/transactions/search.pug
+++ b/views/transactions/search.pug
@@ -4,7 +4,7 @@ block content
 
     h1 Search
     
-      table(style='width:100%')
+      table(style='width:100%', class="table table-bordered")
         tr
           th ID
           th User
