--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -14,7 +14,7 @@ block content
     label Description: 
 
     p
-      input(type="text", name= "description")
+      input(type="text", name= "description", class="form-group")
 
     p 
-      button(type="submit", class="btn btn-primary") Create
+      button(type="submit", class="btn btn-primary ml-2") Create
