--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -22,9 +22,9 @@ block content
 
   form(action="/route/search", method="GET")
 
-    input(type="text", name= "q")
+    input(type="text", name= "q", class="form-group")
 
-    button(type="submit", class="btn btn-primary") Search
+    button(type="submit", class="btn btn-primary ml-2") Search 
 
   ul
     each book in books
