--- a/views/books/update.pug
+++ b/views/books/update.pug
@@ -10,6 +10,6 @@ block content
     p 
       input(type="text", name= "title" value=title)
 
-    button((type="submit", class="btn btn-primary")Edit
+    button((type="submit", class="btn btn-primary ml-2")Edit
 
       
