--- a/views/user/update.pug
+++ b/views/user/update.pug
@@ -11,4 +11,4 @@ block content
     p 
       input(type="text", name= "name" value=name)
 
-    button(type="submit", class="btn btn-primary") Edit
+    button(type="submit", class="btn btn-primary ml-2") Edit
