--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -4,17 +4,17 @@ block content
 
   h1 Create Book
 
-  form(action="/route/create", method="POST")
+  form(action="/route/create", method="POST", class="d-flex")
 
     label Title: 
 
     p 
-      input(type="text", name= "title")
+      input(type="text", name= "title", class="d-flex")
 
     label Description: 
 
     p
-      input(type="text", name= "description", class="form-group")
+      input(type="text", name= "description", class="form-control")
 
     p 
       button(type="submit", class="btn btn-primary ml-2") Create
