--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -2,27 +2,27 @@ extends ../../layouts/common
 
 block content
 
-  h1 Transactions Libary
+  h1(class="text-center") Transactions Libary
 
-  form(action="/transaction/view")
+  form(action="/transaction/view",  class="d-flex")
 
     button(type="submit", class="btn btn-primary") View
 
-  h1 Login User
+  h1(class="text-center") Login User
 
-  form(action="/users/login", method="GET")
+  form(action="/users/login", method="GET", class="d-flex")
 
     button(type="submit", class="btn btn-primary") Login
 
-  h1 Book List
+  h1(class="text-center") Book List
 
-  form(action="/route/create")
+  form(action="/route/create", class="d-flex")
 
     button(type="submit", class="btn btn-primary") Add Title
 
-  form(action="/route/search", method="GET")
+  form(action="/route/search", method="GET", class="d-flex")
 
-    input(type="text", name= "q", class="form-group")
+    input(type="text", name= "q", class="form-control")
 
     button(type="submit", class="btn btn-primary ml-2") Search 
 
