--- a/views/books/update.pug
+++ b/views/books/update.pug
@@ -3,12 +3,12 @@ extends ../../layouts/common
 block content
   h1 Books Update
 
-  form(action="", method="POST")
+  form(action="", method="POST"), class="d-flex"
 
     label Title: 
 
     p 
-      input(type="text", name= "title" value=title)
+      input(type="text",  class="form-control",name= "title" value=title)
 
     button((type="submit", class="btn btn-primary ml-2")Edit
 
