--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -4,17 +4,17 @@ block content
 
     h1 Transactions Libary
 
-    form(action="/route")
+    form(action="/route", class="d-flex")
 
       button(type="submit", class="btn btn-primary") Back
 
-    form(action="/transaction/search", method="GET")
+    form(action="/transaction/search", method="GET", class="d-flex")
 
-      input(type="text", name= "q")
+      input(type="text", name= "q", class="form-control")
 
       button(type="submit", class="btn btn-primary ml-2") Search ID     
 
-    form(action="/transaction/create", method="POST")
+    form(action="/transaction/create", method="POST", class="d-flex")
       label Users:
       span &nbsp
       select(name='user')
