--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -4,12 +4,12 @@ block content
 
   h1 Create User
 
-  form(action="/users/create", method="POST")
+  form(action="/users/create", method="POST", class="d-flex")
 
     label User Name: 
 
     p 
-      input(type="text", name= "name")
+      input(type="text", name= "name", class="form-control")
 
     p 
       button(type="submit", class="btn btn-primary ml-2") Create
