--- a/views/user/update.pug
+++ b/views/user/update.pug
@@ -4,11 +4,11 @@ block content
 
   h1 Users Update
 
-  form(action="", method="POST")
+  form(action="", method="POST", class="d-flex")
 
     label Name: 
 
     p 
-      input(type="text", name= "name" value=name)
+      input(type="text", class="form-control", name= "name" value=name)
 
     button(type="submit", class="btn btn-primary ml-2") Edit
