📍🚘 Checkpoint ./views/books/create.pug:17880600/105 ./views/books/update.pug:17880600/21 ./views/transactions/search.pug:17880600/21 ./views/transactions/index.pug:17880600/21 ./views/user/create.pug:17880600/21 ./views/user/index.pug:17880600/21 ./views/user/update.pug:17880600/129 ./views/books/index.pug:17880600/950

--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -2,7 +2,7 @@ extends ../../layouts/common
 
 block content
 
-  h1 Create Book
+  h1(class="text-center") Create Book
 
   form(action="/route/create", method="POST", class="d-flex")
 
