--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -2,7 +2,7 @@ extends ../../layouts/common
 
 block content
 
-    h1 Transactions Libary
+    h1(class="text-center") Transactions Libary
 
     form(action="/route", class="d-flex")
 
