--- a/views/transactions/search.pug
+++ b/views/transactions/search.pug
@@ -2,7 +2,7 @@ extends ../../layouts/common
 
 block content
 
-    h1 Search
+    h1(class="text-center") Search
     
       table(style='width:100%', class="table table-bordered")
         tr
