--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -2,7 +2,7 @@ extends ../../layouts/common
 
 block content
 
-  h1 Users List
+  h1(class="text-center") Users List
 
   form(action="/users/create", class="d-flex")
 
