--- a/views/books/update.pug
+++ b/views/books/update.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/common
 
 block content
-  h1 Books Update
+  h1 (class="text-center")Books Update
 
   form(action="", method="POST"), class="d-flex"
 
