--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -2,7 +2,7 @@ extends ../../layouts/common
 
 block content
 
-  h1 Create User
+  h1(class="text-center") Create User
 
   form(action="/users/create", method="POST", class="d-flex")
 
