--- a/views/user/update.pug
+++ b/views/user/update.pug
@@ -2,7 +2,7 @@ extends ../../layouts/common
 
 block content
 
-  h1 Users Update
+  h1(class="text-center") Users Update
 
   form(action="", method="POST", class="d-flex")
 
