⛄️🐆 Checkpoint ./views/user/index.pug:17880600/378 ./views/books/index.pug:17880600/157 ./views/books/update.pug:17880600/130 ./views/books/create.pug:17880600/38 ./views/transactions/index.pug:17880600/190 ./views/transactions/search.pug:17880600/38 ./views/user/create.pug:17880600/38 ./views/user/update.pug:17880600/38

--- a/views/books/update.pug
+++ b/views/books/update.pug
@@ -1,15 +1,17 @@
 extends ../../layouts/common
 
 block content
+
   h1(class="text-center") Books Update
 
-  form(action="", method="POST"), class="d-flex"
-
-    label Title: 
-
+  form(action="", method="POST", class="d-flex")
+    
+    p(class="text-center")
+      label Title: 
+      
     p 
-      input(type="text",  class="form-control",name= "title" value=title)
+      input(type="text", class="form-control", name= "title" value=title)
 
-    button((type="submit", class="btn btn-primary ml-2")Edit
+    button(type="submit", class="btn btn-outline-primary ml-2") Edit
 
       
