--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -17,4 +17,4 @@ block content
       input(type="text", name= "description", class="form-control")
 
     p 
-      button(type="submit", class="btn btn-primary ml-2") Create
+      button(type="submit", class="btn btn-outline-primary ml-2") Create
