--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -6,25 +6,25 @@ block content
 
   form(action="/transaction/view",  class="d-flex justify-content-center")
 
-    button(type="submit", class="btn btn-primary") View
+    button(type="submit", class="btn btn-outline-primary") View
 
   h1(class="text-center") Login User
 
   form(action="/users/login", method="GET", class="d-flex justify-content-center")
 
-    button(type="submit", class="btn btn-primary") Login
+    button(type="submit", class="btn btn-outline-primary") Login
 
   h1(class="text-center") Book List
 
   form(action="/route/create", class="d-flex justify-content-center")
 
-    button(type="submit", class="btn btn-primary") Add Title
+    button(type="submit", class="btn btn-outline-primary") Add Title
 
   form(action="/route/search", method="GET", class="d-flex justify-content-center")
 
     input(type="text", name= "q", class="form-control")
 
-    button(type="submit", class="btn btn-primary ml-2") Search 
+    button(type="submit", class="btn btn-outline-primary ml-2") Search 
 
   ul(class="list-group")
     each book in books
@@ -39,7 +39,7 @@ block content
         span &nbsp;
         ul(class="nav justify-content-center")
           li(class="nav-item") 
-            a(class="btn btn-outline-primary mr-2", href='/route/update/' + book.bookId, value="Submit") Update
+            a(class="btn btn-outline-primary", href='/route/update/' + book.bookId, value="Submit") Update
           li(class="nav-item") 
             a(class="btn btn-outline-primary ml-2", href='/route/delete/' + book.bookId) Delete
 
