--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -6,13 +6,13 @@ block content
 
     form(action="/route", class="d-flex")
 
-      button(type="submit", class="btn btn-primary") Back
+      button(type="submit", class="btn btn-outline-primary") Back
 
     form(action="/transaction/search", method="GET", class="d-flex")
 
       input(type="text", name= "q", class="form-control")
 
-      button(type="submit", class="btn btn-primary ml-2") Search ID     
+      button(type="submit", class="btn btn-outline-primary ml-2") Search ID     
 
     form(action="/transaction/create", method="POST", class="d-flex")
       label Users:
@@ -28,7 +28,7 @@ block content
         each book in books
           option(value= book.bookId, class="dropdown-item") #{book.title}  
         span &nbsp
-      button(type="submit", class="btn btn-primary ml-2") Add
+      button(type="submit", class="btn btn-outline-primary ml-2") Add
 
     table(style='width:100%', class="table table-bordered")
       tr
@@ -43,7 +43,7 @@ block content
           td= transaction.bookId
           td
             if transaction.isComplete
-              a(class="btn btn-primary", href="#") True
+              a(class="btn btn-outline-primary", href="#") True
             else
-              a(class="btn btn-primary", href="/transaction/"+  transaction.transactionId + "/complete" ) False
+              a(class="btn btn-outline-primary", href="/transaction/"+  transaction.transactionId + "/complete" ) False
 
