--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -12,4 +12,4 @@ block content
       input(type="text", name= "name", class="form-control")
 
     p 
-      button(type="submit", class="btn btn-primary ml-2") Create
+      button(type="submit", class="btn btn-outline-primary ml-2") Create
