--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -6,26 +6,28 @@ block content
 
   form(action="/users/create", class="d-flex")
 
-    button(type="submit", class="btn btn-primary") Add User
+    button(type="submit", class="btn btn btn-outline-primary") Add User
 
   form(action="/route", class="d-flex")
 
-    button(type="submit", class="btn btn-primary") Back
+    button(type="submit", class="btn btn btn-outline-primary") Back
 
   form(action="/users/search", method="GET", class="d-flex")
 
     input(type="text", name= "q", class="form-control")
 
-    button(type="submit", class="btn btn-primary ml-2") Search
+    button(type="submit", class="btn btn btn-outline-primary ml-2") Search
 
-  ul
+  ul(class="list-group")
     each user in users
-      li
-        p Name:
+      li(class="list-group-item")
+        p(class="d-flex justify-content-center") Name:
           span &nbsp
           span= user.name
           //TẠO KHOẢN CÁCH
-        span &nbsp; 
-        a(class="btn btn-outline-primary", href='/users/update/' + user.userId) Update
-        span &nbsp; 
-        a(class="btn btn-outline-primary", href='/users/delete/' + user.userId) Delete
+        span &nbsp;
+        ul(class="nav justify-content-center")
+          li(class="nav-item") 
+            a(class="btn btn-outline-primary", href='/users/update/' + user.userId) Update
+          li(class="nav-item") 
+            a(class="btn btn-outline-primary ml-2", href='/users/delete/' + user.userId) Delete
