⏳🏕 Checkpoint ./public/favicon.css:17880600/159 ./.glitch-assets:17880600/418 ./layouts/common.pug:17880600/43

--- a/layouts/common.pug
+++ b/layouts/common.pug
@@ -2,5 +2,5 @@ html
   head
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css', integrity='sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk', crossorigin='anonymous')
   body
-    img(src="/public/favicon.css")
+    img(src="5f75a99a75ee88b0d1ff.jpg")
     block content
