--- a/layouts/common.pug
+++ b/layouts/common.pug
@@ -5,6 +5,7 @@ html
     link(rel='icon', type='image/png', sizes='32x32', href='/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
     link(rel='manifest', href='/site.webmanifest')
+    link(rel='stylesheet', href='../pulic/custom.css')
   body
-    img(src="5f75a99a75ee88b0d1ff.jpg")
+    img(src="favicon.png")
     block content
