--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -25,25 +25,21 @@ block content
 
     button(type="submit", class="btn btn-outline-primary ml-2") Search 
 
-  table.table
+  table(style='width:100%', class="table table-bordered")
     tr
       th Title
       th Description
+      th Edit Title
+      th Delete
     each book in books
-      li(class="list-group-item")
-        p(class="d-flex justify-content-center") Title:
-          span &nbsp
-          span= book.title
-        p(class="d-flex justify-content-center") Description:
-          span &nbsp
-          span= book.description
+      tr
+        td= book.title
+        td= book.description
         //TẠO KHOẢN CÁCH
-        span &nbsp;
-        ul(class="nav justify-content-center")
-          li(class="nav-item") 
-            a(class="btn btn-outline-primary", href='/route/update/' + book.bookId, value="Submit") Update
-          li(class="nav-item") 
-            a(class="btn btn-outline-primary ml-2", href='/route/delete/' + book.bookId) Delete
+        td
+          a(class="btn btn-outline-primary", href='/route/update/' + book.bookId, value="Submit") Update
+        td
+          a(class="btn btn-outline-primary ml-2", href='/route/delete/' + book.bookId) Delete
 
 
       
