--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -18,9 +18,10 @@ block content
 
     button(type="submit", class="btn btn btn-outline-primary ml-2") Search
 
-  ul(class="list-group")
+  table(style='width:100%', class="table table-bordered")
     each user in users
-      li(class="list-group-item")
+       tr
+          th Title
         p(class="d-flex justify-content-center") Name:
           span &nbsp
           span= user.name
