--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -5,11 +5,11 @@ block content
   h1(class="text-center") Create User
 
   form(action="/users/create", method="POST", class="d-flex")
-
-    label User Name: 
+    
+    label(for="name") User Name: 
 
     p 
-      input(type="text", name= "name", class="form-control")
+      input#name(type="text", name= "name", class="form-control")
 
     p 
       button(type="submit", class="btn btn-outline-primary ml-2") Create
