--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -6,12 +6,12 @@ block content
 
   form(action="/route/create", method="POST")
 
-    p(class="d-flex justify-content-center") Title: 
+    label(for="title") Title: 
 
-    input(type="text", name= "title", class="form-control")
+    input#title(type="text", name= "title", class="form-control")
 
-    p(class="d-flex justify-content-center") Description: 
+    label(for="description") Description: 
 
-    input(type="text", name= "description", class="form-control")
+    input#description(type="text", name= "description", class="form-control")
  
     button(type="submit", class="btn btn-outline-primary mt-2") Create
