--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -15,7 +15,7 @@ block content
         li.nav-item
           a.nav-link(href='/transaction/view') Transactions
         li.nav-item
-          a.nav-link(href='/route/create') Book List
+          a.nav-link(href='/route/create') Create Book 
         li.nav-item
           a.nav-link(href='/users/login') Login User
 
@@ -25,7 +25,8 @@ block content
 
         button(type="submit", class="btn btn-outline-primary my-2 my-sm-0") Search 
           
-
+  h1(class="text-center") Book List
+  
   table(style='width:100%', class="table table-bordered")
     tr
       th Title
