--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -3,6 +3,10 @@ extends ../../layouts/common
 block content
 
   h1(class="text-center") Create Book
+  
+  if errors 
+    each error in errors
+      .alert.alert-danger = error
 
   form(action="/route/create", method="POST")
 
