--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -1,7 +1,9 @@
 extends ../../layouts/common
 
 block content
-
+      if errors 
+        each error in errors
+          .alert.alert-danger= error;
     h1(class="text-center") Transactions Libary
 
     form(action="/route", class="d-flex")
@@ -30,7 +32,6 @@ block content
         span &nbsp
       button(type="submit", class="btn btn-outline-primary ml-2") Add
       
-
     table(style='width:100%', class="table table-bordered")
       tr
         th(scope="col") ID
