--- a/views/transactions/complete.pug
+++ b/views/transactions/complete.pug
@@ -1,3 +1,6 @@
-   if errors
+extends ../../layouts/common
+
+block content    
+    if errors
       each error in errors 
         .alert.alert-danger= error;
