🗃🚕 Checkpoint ./controllers/transaction.controller.js:5345387/94:17880600/101 ./views/transactions/index.pug:5345387/271

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -3,6 +3,8 @@ extends ../../layouts/common
 block content
      
     h1(class="text-center") Transactions Libary
+    .alert.alert-danger(role='alert')
+      | A simple warning alert—check it out!
 
     form(action="/route", class="d-flex")
 
