--- a/views/transactions/complete.pug
+++ b/views/transactions/complete.pug
@@ -3,4 +3,4 @@ extends ../../layouts/common
 block content    
     if errors
       each error in errors 
-        .alert.alert-danger= error;
+        .alert.alert-danger= error
