--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -3,8 +3,12 @@ extends ../../layouts/common
 block content
      
     h1(class="text-center") Transactions Libary
-    .alert.alert-danger(role='alert')
-      | A simple warning alert—check it out!
+    // mình viết lại chỗ này cho bạn 
+    if errors
+      each error in errors 
+        .alert.alert-danger(role='alert')= error
+    // mình viết lại chỗ này cho bạn 
+      // tại sao lại là role='alert' cái này anh?
 
     form(action="/route", class="d-flex")
 
