🏪🙋 Checkpoint ./controllers/transaction.controller.js:17880600/380 ./views/transactions/index.pug:17880600/88 ./views/transactions/complete.pug:17880600/155 ./db.json:17880600/923

--- a/views/transactions/complete.pug
+++ b/views/transactions/complete.pug
@@ -4,3 +4,7 @@ block content
     if errors
       each error in errors 
         .alert.alert-danger(role='alert')= error
+        
+    form(action="/transaction/view", class="d-flex")
+
+      button(type="submit", class="btn btn-outline-primary") Back
