--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -2,6 +2,10 @@ extends ../../layouts/common
 
 block content
 
+  if errors 
+    each error in errors
+      .alert.alert-danger(role='alert')= error
+
   h1(class="text-center") Create User
 
   form(action="/users/create", method="POST", class="d-flex")
