😼🍩 Checkpoint ./db.json:17880600/1280 ./controllers/transaction.controller.js:17880600/125 ./middlewares/auth.middleware.js:17880600/346 ./server.js:17880600/2132 ./views/transactions/index.pug:17880600/249 ./routes/routes/auth.route.js:17880600/330 ./routes/auth.route.js:17880600/330 ./controllers/auth.controller.js:17880600/853

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -18,21 +18,22 @@ block content
 
       button(type="Submit", class="btn btn-outline-primary ml-2") Search ID     
 
-    form(action="/transaction/create", method="POST", class="d-flex")
-      label Users:
-      span &nbsp
-      select(name='user')
-        each user in users
-          option(value= user.userId, class="dropdown-item") #{user.name}
-      span &nbsp  
-
-      label Books:
-      span &nbsp
-      select(name='book')
-        each book in books
-          option(value= book.bookId, class="dropdown-item") #{book.title}  
+    if isAdmin
+      form(action="/transaction/create", method="POST", class="d-flex")
+        label Users:
         span &nbsp
-      button(type="submit", class="btn btn-outline-primary ml-2") Add
+        select(name='user')
+          each user in users
+            option(value= user.userId, class="dropdown-item") #{user.name}
+        span &nbsp  
+
+        label Books:
+        span &nbsp
+        select(name='book')
+          each book in books
+            option(value= book.bookId, class="dropdown-item") #{book.title}  
+          span &nbsp
+        button(type="submit", class="btn btn-outline-primary ml-2") Add
       
     table(style='width:100%', class="table table-bordered")
       tr
