⏲⚽️ Checkpoint ./views/auth/login.pug:17880600/542 ./views/books/index.pug:17880600/332

--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -7,14 +7,14 @@ block nav
     a.navbar-brand(href='#') Libary
     button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
+    if isAdmin 
+      a.nav-link(href='/transaction/view') Transactions
     #navbarNav.collapse.navbar-collapse
       ul.navbar-nav
         li.nav-item.active
           a.nav-link(href='/route')
             | Home 
             span.sr-only (current)
-        li.nav-item
-          a.nav-link(href='/transaction/view') Transactions
         li.nav-item
           a.nav-link(href='/route/create') Create Book 
         li.nav-item
