--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -3,27 +3,42 @@ extends ../../layouts/common
 block content
 block nav
 
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light
-      a.navbar-brand(href='#') Libary
-      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
-        span.navbar-toggler-icon
-      #navbarNav.collapse.navbar-collapse
-        ul.navbar-nav
-          li.nav-item.active
-            a.nav-link(href='/route')
-              | Home 
-              span.sr-only (current)
-          li.nav-item
-            a.nav-link(href='/route/create') Create Book 
-          li.nav-item
-            a.nav-link(href='/users/login') Login User
-            
+  nav.navbar.navbar-expand-lg.navbar-light.bg-light
+    a.navbar-brand(href='#') Libary
+    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
+      span.navbar-toggler-icon
+    #navbarNav.collapse.navbar-collapse
+      ul.navbar-nav
+        li.nav-item.active
+          a.nav-link(href='/route')
+            | Home 
+            span.sr-only (current)
+        li.nav-item
+          a.nav-link(href='/route/create') Create Book 
+        li.nav-item
+          a.nav-link(href='/users/login') Login User
+
+          
       form.ml-auto(action="/route/search", method="GET", class="form-inline my-2 my-lg-0")
 
         input(type="text", name= "q", class="form-control mr-sm-2", placeholder="Search", aria-label="Search")
 
         button(type="submit", class="btn btn-outline-primary my-2 my-sm-0") Search 
-          
+  
+  
+  if isAdmin
+    form.ml-auto(action="/transaction/view", class="form-inline my-2 my-lg-0")
+        button(type="submit", class="btn btn-outline-primary my-2 my-sm-0")  transaction
+  if isAdmin
+    form(action='books/create' , method='POST')
+      .form-group
+        label(for='title') Title Book
+        input#title.form-control(type='text', name='title')
+      .form-group
+        label(for='description')  Description Book
+        input#description.form-control(type='text', name='description')
+      button.btn.btn-primary Create
+  
   h1(class="text-center") Book List
   
   table(style='width:100%', class="table table-bordered")
