🏚🏀 Checkpoint ./controllers/book.controller.js:17880600/292 ./controllers/auth.controller.js:17880600/384 ./views/auth/login.pug:17880600/39 ./views/isAdmin/lookuser.pug:17880600/680

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -17,7 +17,7 @@ block content
     .form-group 
     label(for="Email") Password: 
 
-    input#password(type="password", name= "password", class="form-control", value=values ? values.phone : "")
+    input#password(type="password", name= "password", class="form-control", value=values ? values.password : "")
 
     button.btn.btn-outline-primary  Login
     
