--- a/views/isAdmin/lookuser.pug
+++ b/views/isAdmin/lookuser.pug
@@ -14,6 +14,9 @@ block nav
             | Home 
             span.sr-only (current)
         li.nav-item
+          a.nav-link(href='/transaction/view') Transactions
+        li.nav-item
           a.nav-link(href='/route/create') Create Book 
         li.nav-item
-          a.nav-link(href='/users/login') Login
+          a.nav-link(href='/users/login') Login User
+          
