--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -21,6 +21,6 @@ block content
 
     button(type="submit", class="btn btn-outline-primary mt-4") Login 
     
-  form(action="auth/signup", method="POST")
-    button(type="submit", class="btn btn-outline-primary mt-4 ml-4") Sign Up 
+  form(action="/auth/signup")
+    button(type="submit", class="btn btn-outline-primary mt-2") Sign Up 
     
