🐓🐦 Checkpoint ./controllers/user.controller.js:17880600/155 ./validate/user.validate.js:17880600/18 ./routes/user.route.js:17880600/62 ./controllers/auth.controller.js:17880600/452 ./routes/auth.route.js:17880600/61 ./views/auth/signup.pug:17880600/13

--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -8,7 +8,7 @@ block content
 
   h1(class="text-center") Create User
 
-  form(action="/users/create", method="POST", class="d-flex")
+  form(action="", method="POST", class="d-flex")
   
     .form-group   
       label(for="Email") Email: 
