--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -8,7 +8,12 @@ block content
 
   h1(class="text-center") Create User
 
-  form(action="", method="POST", class="d-flex")
+  form(action="/auth/signup", method="POST", class="d-flex")
+  
+    .form-group   
+      label(for="name") Name: 
+
+      input#name(type="text", name= "name", class="form-control")
   
     .form-group   
       label(for="Email") Email: 
