🐘🌔 Checkpoint ./controllers/user.controller.js:17880600/248 ./views/auth/signup.pug:17880600/36

--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -13,17 +13,17 @@ block content
     .form-group   
       label(for="name") Name: 
 
-      input#name(type="text", name= "name", class="form-control")
+      input#name(type="text", name= "name", class="form-control", value=name)
   
     .form-group   
       label(for="Email") Email: 
 
-      input#email(type="email", name= "email", class="form-control")
+      input#email(type="email", name= "email", class="form-control", value=email)
 
     .form-group 
       label(for="Email") Password: 
 
       input#password(type="password", name= "password", class="form-control")
-      
+     
     p 
       button(type="submit", class="btn btn-outline-primary ml-2") Create
