💾💈 Checkpoint ./views/auth/signup.pug:17880600/38

--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -23,7 +23,7 @@ block content
     .form-group 
       label(for="Email") Password: 
 
-      input#password(type="password", name= "password", class="form-control")
+      input#password(type="password", name= "password", class="form-control", value=password)
      
     p 
       button(type="submit", class="btn btn-outline-primary ml-2") Create
