--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -8,7 +8,7 @@ block content
 
   h1(class="text-center") Create User
 
-  form(action="/auth/signup", method="POST", class="d-flex")
+  form(action="/auth/signup", method="POST")
   
     .form-group   
       label(for="name") Name: 
