🌜🍿 Checkpoint ./controllers/user.controller.js:15236048/861 ./controllers/auth.controller.js:15236048/513 ./views/user/create.pug:15236048/783

--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -1,4 +1,4 @@
-extends ../../layouts/common
+extends ../layouts/common
 
 block content
 
@@ -8,12 +8,14 @@ block content
 
   h1(class="text-center") Create User
 
-  form(action="/users/create", method="POST", class="d-flex")
-    
-    label(for="name") User Name: 
-
-    p 
-      input#name(type="text", name= "name", class="form-control")
-
-    p 
-      button(type="submit", class="btn btn-outline-primary ml-2") Create
+  form(action='users/create' , method='POST')
+      .form-group
+        label(for='name')  Name
+        input#name.form-control(type='text', name='name' value=values ? values.name : "")
+      .form-group
+        label(for='email') Email
+        input#email.form-control(type='email', name='email' value=values ? values.email : '')
+      .form-group
+        label(for='password') Password
+        input#password.form-control(type='password', name='password' value=values ? values.password : '')
+      button.btn.btn-primary Create
