⏲📫 Checkpoint ./controllers/user.controller.js:15236048/131 ./routes/auth.route.js:15236048/97 ./routes/user.route.js:15236048/66 ./views/user/create.pug:15236048/1

--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -8,7 +8,7 @@ block content
 
   h1(class="text-center") Create User
 
-  form(action='users/create' , method='POST')
+  form(action='/users/create' , method='POST')
       .form-group
         label(for='name')  Name
         input#name.form-control(type='text', name='name' value=values ? values.name : "")
