👳🕷 Checkpoint ./views/auth/login.pug:17880600/37 ./views/user/create.pug:17880600/122

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -21,6 +21,6 @@ block content
 
     button(type="submit", class="btn btn-outline-primary mt-4") Login 
     
-  form(action="/auth/signup")
+  form(action="/users/create")
     button(type="submit", class="btn btn-outline-primary mt-2") Sign Up 
     
